--- a/public_html/index.html
+++ b/public_html/index.html
@@ -13,7 +13,7 @@ and open the template in the editor.
         <link href="newcss.css" rel="stylesheet" type="text/css"/>
     </head>
     <body>
-        <!--GDFKGDKFG;DFG;D-->
+        GDFKGDKFG;DFG;D
 <div class="container-fluid">
     <div class="row">
   <div class="col">P</div>
